# mega_benchmark

./: .gitignore  README.md
hotpotqa_original/: hotpotqa_test.py  pyproject.toml
hover_original/: hover_test.py
ifbench_original/: pyproject.toml
optimization-results/: optimization results.md
optimization-results/hotpotqa/: hotpotqa_test_mega_optimized.py  hotpotqa_test_original.py
optimization-results/hotpotqa/results/: hotpotqa_optimized.json
optimization-results/hover/: hover_test_mega_optimized.py  hover_test_original.py  pyproject.toml
optimization-results/hover/results/: hover_optimized.json
optimization-results/ifbench/: ifbench_test_mega_optimized.py  ifbench_test_original.py
optimization-results/ifbench/results/: ifbench_optimized.json
optimization-results/pupa/: pupa_test_mega_optimized.py  pupa_test_original.py
optimization-results/pupa/results/: pupa_optimized.json
pupa_original/: pupa_test.py  pyproject.toml
skillbench-records/: README.md
skillbench-records/experiments/configs/: wisdomgraph.yaml
skillbench-records/scripts/agentskillos/: build_tree.py  discover_skills.py
skillbench-records/scripts/skillnet-benchmark/outputs/: domain_index.json  latency_metrics.json
skillbench-results/: skillbench results.md
skillbench-results/experiments/configs/: agentskillos.yaml  no-skills.yaml  skillnet.yaml
skillbench-results/scripts/agentskillos/: assemble_tasks.py  generate_dag_plans.py
skillbench-results/scripts/agentskillos/outputs/: dag_plans.json  latency_metrics.json  (+1 more)
skillbench-results/scripts/skillnet-benchmark/: run.py
(+2 files in other folders)
